Fixed broken include paths

--- a/website/css/hashtux.css
+++ b/website/css/hashtux.css
@@ -174,7 +174,7 @@
 }
 
 .spinner {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    width: 50px;
+    height: 50px;
+    background-color: #ffffff;
 }
